[package]
name = "gtrie"
version = "0.4.0"
authors = ["Alexander Serebryakov <alex.serebr@gmail.com>"]

description = "Generic trie implementation with a support of different key and value types"

# documentation = "..."
homepage = "https://github.com/aserebryakov/trie-rs"
repository = "https://github.com/aserebryakov/trie-rs.git"

readme = "README.md"

keywords = ["trie", "data-structures", "generic"]
categories = ["data-structures"]
license = "MIT"

[badges]

travis-ci = { repository = "aserebryakov/trie-rs", branch = "master" }
maintenance = { status = "experimental"}

[dependencies]
